<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score_label" />

    <TextView
        android:id="@+id/tv_final_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label" />

    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name_hint" />

</LinearLayout>
